Fix search tag width bug on firefox.
Without a min-width, the tag would not extend to fit the full
size of the contents on Firefox. It seemed to work just fine on
Chrome, though. The fix is simple - just enforce a min-width equal
to fit-content.

--- a/pydis_site/static/css/resources/resources.css
+++ b/pydis_site/static/css/resources/resources.css
@@ -95,6 +95,7 @@ display: block;
 .tag.search-query {
     display: none;
     max-width: fit-content;
+    min-width: fit-content;
 }
 .tag.search-query .inner {
     padding: 0;
